# synckit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yml  dotnet-server.yml  integration-tests.yml
artifacts/e2e-tests/: compose.ps.txt
core/: Cargo.toml  WASM_README.md
core/benches/: delta_bench.rs  fugue_bench.rs  lww_bench.rs  vector_clock_bench.rs
core/scripts/: build-wasm.ps1  build-wasm.sh
core/src/: document.rs  error.rs  lib.rs
core/src/awareness/: clock.rs  mod.rs  state.rs
core/src/crdt/: fractional_index.rs  mod.rs  or_set.rs  pn_counter.rs
core/src/crdt/text/: id.rs  item.rs  mod.rs  text.rs
core/src/crdt/text_fugue/: block.rs  mod.rs  node.rs  text.rs
core/src/protocol/: delta.rs  serialize.rs
core/src/sync/: delta.rs  lww.rs  mod.rs  vector_clock.rs
core/src/wasm/: bindings.rs  mod.rs  utils.rs
core/tests/: property_tests.rs  wasm_test.html  wasm_test.mjs
docs/: README.md
docs/.dotnet-feature/: EVALUATION_CHECKLIST.md  PHASE-ASSESSMENT-MATRIX.md  PROPOSAL.md  REMAINING-FAILURES-INSTRUCTIONS.md  THROTTLE-TUNING-INSTRUCTIONS.md
docs/.dotnet-feature/work-items/: AUDIT-TYPESCRIPT-PARITY.md  F1-09.md  PHASE-1-FOUNDATION.md  PHASE-2-PROTOCOL.md  PHASE-3-AUTH.md  PHASE-4-SYNC-ENGINE.md  PHASE-5-AWARENESS.md  PHASE-6-STORAGE.md  PHASE-7-TESTING.md
docs/.dotnet-feature/work-items/audit-findings/: 00-START-HERE.md  AUDIT-EXECUTION-SUMMARY.md  BATCH-PROMPTS.md  DISPARITY-001.md  DISPARITY-002.md  DISPARITY-003.md  DISPARITY-004.md  DISPARITY-005.md  DISPARITY-006.md  DISPARITY-007.md  DISPARITY-008.md  DISPARITY-009.md  DISPARITY-010.md  DISPARITY-011.md  QUICK-REFERENCE.md  README.md  _TEMPLATE.md
docs/.dotnet-feature/work-items/phase-1/: F1-01.md  F1-01a.md  F1-02.md  F1-03.md  F1-04.md  F1-05.md  F1-06.md  F1-07.md  F1-08.md  F1-09.md  README.md
docs/.dotnet-feature/work-items/phase-2/: P2-01.md  P2-02.md  P2-03.md  P2-04.md  P2-05.md  P2-06.md  (+4 more)
docs/api/: COUNTER_SET_API.md  NETWORK_API.md  SDK_API.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: awareness-protocol.md  bundle-size-optimization.md  choosing-variant.md  conflict-resolution.md  cursor-selection-sharing.md  getting-started.md  migration-from-firebase.md  migration-from-supabase.md  migration-from-v0.1.0.md  migration-from-yjs.md  offline-first.md  performance.md  rich-text-editing.md  svelte-integration.md  testing.md  undo-redo.md  vue-integration.md
examples/collaborative-editor/: README.md  package.json
examples/collaborative-editor/src/: App.css  App.tsx  store.ts  types.ts
examples/project-management/: README.md
examples/project-management/src/: App.tsx  store.ts  types.ts
examples/react-cursors/: README.md  cursors-basic.html  cursors-container-mode.html  text-selection.html
examples/react-example/: README.md  package.json
examples/react-example/src/: App.tsx
examples/svelte-collaborative-editor/: .gitignore  README.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
examples/svelte-collaborative-editor/src/: App.svelte
examples/todo-app/: README.md
examples/vue-collaborative-editor/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/vue-collaborative-editor/src/: App.vue  style.css
orchestration/aspire/: README.md  SyncKit.Orchestration.sln
orchestration/aspire/SyncKit.AppHost/: AppHost.cs  SyncKit.AppHost.csproj  appsettings.CSharp.json  appsettings.Development.json  appsettings.Full.json  appsettings.Postgres.json  appsettings.json
protocol/specs/: README.md  messages.proto
protocol/tla/: FUGUE_VERIFICATION_COMPLETE.md  README.md  convergence.cfg  convergence.tla  fugue_convergence.cfg  fugue_convergence.tla  fugue_core.tla  fugue_deletion.cfg  fugue_deletion.tla  fugue_determinism.cfg  fugue_determinism.tla  fugue_non_interleaving.cfg  fugue_non_interleaving.tla  fugue_operations.tla  lww_merge.cfg  lww_merge.tla  vector_clock.cfg
scripts/: build-wasm.sh  check-sizes.sh
scripts/db/: migrate.ts
sdk/: .gitignore  PERFORMANCE.md  README.md  analyze-bundle.js  package.json  playwright.config.ts  tsup.config.ts
sdk/scripts/: copy-components.js
sdk/src/: awareness.ts  counter.test.ts  counter.ts  document.ts  index-lite.ts  index.ts  set.test.ts  set.ts  synckit.ts  text.test.ts  text.ts  types.ts  wasm-loader.ts
sdk/src/__tests__/: cross-tab.test.ts  indexed-db.test.ts  leader-election.test.ts  message-loss-recovery.test.ts  operation-merging.test.ts  storage-coordinator.test.ts  undo-manager.test.ts
sdk/src/adapters/: react.tsx
sdk/src/crdt/: delta.test.ts  delta.ts  richtext.ts
sdk/src/cursor/: animation.ts  collision.ts  coordinates.ts  inactive.ts  index.ts  selection.ts  spring.ts  throttle.ts  types.ts  xpath.ts
sdk/src/integrations/: quill.ts
sdk/src/storage/: indexed-db.ts  indexeddb.ts  storage-coordinator.ts
sdk/src/sync/: awareness-manager.ts  cross-tab.ts  manager.ts  message-types.ts  network-state.ts  queue.ts
sdk/src/undo/: undo-manager.ts
sdk/src/websocket/: client.ts
sdk/tests/: awareness-integration-test.mjs
sdk/wasm/default/: synckit_core.d.ts  synckit_core.js  synckit_core_bg.wasm.d.ts
server/csharp/: TESTING.md  test-auth-endpoints.sh  test-auth-timeout-manual.sh
server/csharp/src/: .dockerignore  .editorconfig  .gitignore  Directory.Build.props  Dockerfile  Dockerfile.test  README.md  SyncKit.Server.sln  docker-compose.test.yml  run-tests.sh
server/typescript/: .env.example  .gitignore  README.md  package.json  tsconfig.json
server/typescript/src/: config.ts  index.ts
src/orchestration/SyncKit.AppHost/: AppHost.cs  appsettings.Development.json  appsettings.json
tests/: README.md  run-against-csharp.sh
tests/chaos/: convergence.test.ts  disconnections.test.ts  latency.test.ts  message-corruption.test.ts  network-simulator.ts  packet-loss.test.ts
tests/integration/: config.ts
tests/integration/helpers/: test-server.ts
tests/load/: profiling.test.ts
(+324 files in other folders)
