[package]
name = "synckit-core"
version = "0.1.0"
edition = "2021"
authors = ["SyncKit Contributors"]
description = "High-performance sync engine for local-first applications"
license = "MIT"
repository = "https://github.com/yourusername/synckit"
keywords = ["sync", "crdt", "local-first", "offline-first", "realtime"]
categories = ["wasm", "data-structures", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]  # WASM + native library

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"           # Protocol Buffers
bytes = "1.5"            # Efficient byte buffers
base64 = "0.22"          # Base64 encoding

# WASM support (for Phase 5)
wasm-bindgen = { version = "=0.2.105", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
thiserror = "1.0"

[build-dependencies]
prost-build = "0.12"            # Protobuf code generation
protoc-bin-vendored = "3.0"     # Bundled protoc compiler

[dev-dependencies]
# Testing
criterion = "0.5"        # Benchmarking
proptest = "1.0"         # Property-based testing

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

# Benchmark harness
[[bench]]
name = "lww_bench"
harness = false
path = "benches/lww_bench.rs"

[[bench]]
name = "vector_clock_bench"
harness = false
path = "benches/vector_clock_bench.rs"

[[bench]]
name = "delta_bench"
harness = false
path = "benches/delta_bench.rs"

[profile.release]
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols for smaller binary

[profile.release.package."*"]
opt-level = 3

# WASM-specific optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize for size
