[package]
name = "synckit-core"
version = "0.1.0"
edition = "2021"
authors = ["SyncKit Contributors"]
description = "High-performance sync engine for local-first applications"
license = "MIT"
repository = "https://github.com/Dancode-188/synckit"
keywords = ["sync", "crdt", "local-first", "offline-first", "realtime"]
categories = ["wasm", "data-structures", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]  # WASM + native library

[dependencies]
# Serialization (always needed)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional: Protocol Buffers (only for full core with network support)
prost = { version = "0.14", optional = true }
bytes = { version = "1.5", optional = true }
base64 = { version = "0.22", optional = true }

# WASM support
wasm-bindgen = { version = "=0.2.106", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Optional: DateTime library (only for full core)
chrono = { version = "0.4", features = ["serde", "wasmbind"], optional = true }

# Optional: Smaller allocator for WASM size optimization
wee_alloc = { version = "0.4.5", optional = true }

# Utilities (always needed)
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Optional: Rope data structure for efficient text editing (text-fugue CRDT)
ropey = { version = "1.6", optional = true }
unicode-segmentation = { version = "1.10", optional = true }

[build-dependencies]
# Optional: Protobuf code generation (only when prost feature enabled)
prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = { version = "3.0", optional = true }

[dev-dependencies]
# Testing
criterion = "0.5"        # Benchmarking (compatible with Rust 1.83)
proptest = "1.0"         # Property-based testing

[features]
# Default: core-lite for minimal bundle size
default = ["core-lite"]

# Core variants
core-lite = ["wee_alloc"]              # Minimal: LWW + Vector Clock (~22-25KB target)
core = []                               # Base core (no datetime, no protobuf)

# Optional features (can be added to core)
datetime = ["chrono"]                   # DateTime support (~30-40KB)
protocol-binary = ["prost", "bytes", "base64", "chrono", "prost-build", "protoc-bin-vendored"]  # Binary protocol (~20-30KB, includes datetime)

# Individual CRDTs (opt-in, require core)
text-crdt = ["core", "ropey", "unicode-segmentation"]  # Fugue Text CRDT with Rope
counters = ["core"]
sets = ["core"]
fractional-index = ["core"]

# Convenience bundles
text = ["core", "text-crdt"]
advanced = ["core", "counters", "sets", "fractional-index"]
full = ["core", "datetime", "protocol-binary", "text-crdt", "counters", "sets", "fractional-index", "wee_alloc"]

# WASM support (orthogonal to features)
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook"]

# Legacy alias for backward compatibility
protocol = ["protocol-binary"]

# Benchmark harness
[[bench]]
name = "lww_bench"
harness = false
path = "benches/lww_bench.rs"

[[bench]]
name = "vector_clock_bench"
harness = false
path = "benches/vector_clock_bench.rs"

[[bench]]
name = "delta_bench"
harness = false
path = "benches/delta_bench.rs"

[[bench]]
name = "fugue_bench"
harness = false
path = "benches/fugue_bench.rs"
required-features = ["text-crdt"]

[profile.release]
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols for smaller binary

[profile.release.package."*"]
opt-level = 3

# WASM-specific optimizations (use with: cargo build --profile wasm-release)
[profile.wasm-release]
inherits = "release"
opt-level = "z"           # Optimize for size (not speed)
lto = "fat"               # Aggressive link-time optimization
codegen-units = 1         # Better optimization (slower compile)
panic = "abort"           # Smaller binary (no unwind tables)
strip = "symbols"         # Remove debug symbols
overflow-checks = false   # Disable overflow checks (smaller)
